testsuite/tests/typecheck/should_fail/T2126.hs
-- Trac #2126

module Foo where

newtype X
